update color of navbar and footer.. Add Contact Links

--- a/assets/general.scss
+++ b/assets/general.scss
@@ -26,7 +26,7 @@ a {
   color: $link-color !important;
 
   &:hover{
-    text-decoration: underline;
+    color: $link-color-hover !important;
   }
 }
 
