--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -4,4 +4,10 @@
 // $font-size-root: 20px;
 
 $main-font: 'Tajawal', sans-serif !important;
-$link-color: #A7FFEB;
+
+$link-color: #91d694;
+$link-color-hover: #c2ded7;
+
+$bg-main: #2E7D32 !important;
+
+$main-color: #00796B !important;
